Added section id and h1 to the html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-
+ 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<section id="welcome-section">
+  <h1>welcome to my page</h1>
+</section>
 
-    <p>Hello, world !</p>
+
+
+
+    
     <script  src="js/index.js"></script>
   </body>
 </html>
