--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <h1>welcome to my page</h1>
 </section>
 
+<section id="projects">
+  <div id="project-title">
+    
+  </div>
+</section>
+
 
 
 
