Added section 5-6 to the html

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
  
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<section id="welcome-section">
+    
+    <nav id = "navbar"></nav>
+
+    <section id="welcome-section">
   <h1>welcome to my page</h1>
 </section>
 
 <section id="projects">
-  <div id="project-title">
-    
+  <div id = "project-1" class ="project-tile">
+
+
   </div>
+  <a href = "#project-1">project1</a> 
+
 </section>
+
 
 
 
