--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
- 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
-    <nav id = "navbar"></nav>
+    <nav id="navbar">
+      <a href="#projects">section#1</a>
+      <a href="https://github.com/elassis" target="_blank" id="profile-link">My profile</a>
+    </nav>
 
     <section id="welcome-section">
-  <h1>welcome to my page</h1>
-</section>
+     <h1>welcome to my page</h1>
+   </section>
 
-<section id="projects">
-  <div id = "project-1" class ="project-tile">
-
-
-  </div>
-  <a href = "#project-1">project1</a> 
-
-</section>
+   <section id="projects">
+    <div id = "project-1" class ="project-tile"></div>
+    <a href = "#project-1">project1</a> 
+   </section>
 
 
 
